<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="cursive"
        android:text=" "
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bossFought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="46dp"
        android:text="@string/bossFought"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <TextView
        android:id="@+id/party1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/party1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bossFought" />

    <TextView
        android:id="@+id/party2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/party2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/party1" />

    <TextView
        android:id="@+id/party3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/party3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/party2" />

    <TextView
        android:id="@+id/party4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/party4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/party3" />

    <TextView
        android:id="@+id/takenTurns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/takenTurns"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/party4" />

    <TextView
        android:id="@+id/bossNameF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="46dp"
        android:text=" "
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/bossFought"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <TextView
        android:id="@+id/party1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text=" "
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/party1"
        app:layout_constraintTop_toBottomOf="@+id/bossNameF" />

    <TextView
        android:id="@+id/party2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text=" "
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/party2"
        app:layout_constraintTop_toBottomOf="@+id/party1Name" />

    <TextView
        android:id="@+id/party3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text=" "
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/party3"
        app:layout_constraintTop_toBottomOf="@+id/party2Name" />

    <TextView
        android:id="@+id/party4Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text=" "
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/party4"
        app:layout_constraintTop_toBottomOf="@+id/party3Name" />

    <TextView
        android:id="@+id/takenTurnsF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="99"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/takenTurns"
        app:layout_constraintTop_toBottomOf="@+id/party4Name" />

    <ImageButton
        android:id="@+id/retryButton"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takenTurns"
        app:srcCompat="@android:drawable/ic_menu_always_landscape_portrait" />

    <ImageButton
        android:id="@+id/homeButton3"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toEndOf="@+id/teamButton"
        app:layout_constraintTop_toBottomOf="@+id/takenTurns"
        app:srcCompat="@android:drawable/btn_star" />

    <ImageButton
        android:id="@+id/teamButton"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toEndOf="@+id/bossButton"
        app:layout_constraintTop_toBottomOf="@+id/takenTurns"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <ImageButton
        android:id="@+id/bossButton"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toEndOf="@+id/retryButton"
        app:layout_constraintTop_toBottomOf="@+id/takenTurns"
        app:srcCompat="@android:drawable/ic_menu_compass" />
</androidx.constraintlayout.widget.ConstraintLayout>